Avanace formulario indicadores

--- a/Back/appsettings.json
+++ b/Back/appsettings.json
@@ -6,7 +6,7 @@
   },
   "ConnectionStrings": {
     "SqlServer": "Server=FAMILIACL\\SQLEXPRESS;Database=bdconocimiento_sqlexpress;Integrated Security=True;TrustServerCertificate=True;",
-    "LocalDb": "Server=(localdb)\\mssqllocaldb;Database=Indicadores;Integrated Security=True;TrustServerCertificate=True;"
+    "LocalDb": "Server=ANDRES;Database=bd_indicadores;Integrated Security=True;TrustServerCertificate=True;"
   },
   "DatabaseProvider": "LocalDb"
 }
