--- a/Back/csharpapi.csproj
+++ b/Back/csharpapi.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <!-- Define las dependencias del proyecto -->
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.6" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
