actualizar rutas de conexion

--- a/Back/appsettings.json
+++ b/Back/appsettings.json
@@ -5,8 +5,8 @@
     "Audience": "MyAppUsers"
   },
   "ConnectionStrings": {
-    "SqlServer": "Server=FAMILIACL\\SQLEXPRESS;Database=bdconocimiento_sqlexpress;Integrated Security=True;TrustServerCertificate=True;",
-    "LocalDb": "Server=MAUROAS\\SQLEXPRESS;Database=bd_indicadores;Integrated Security=True;TrustServerCertificate=True;"
+    "SqlServer": "Server=ays-sql-server.database.windows.net,1433;Database=AyS-indicadores-bd;User ID=ays-sql-server;Password=contraseña-123;Encrypt=True;TrustServerCertificate=True;",
+    "LocalDb": "Server=ANDRES;Database=bd_indicadores;Integrated Security=True;TrustServerCertificate=True;"
   },
-  "DatabaseProvider": "LocalDb"
+  "DatabaseProvider": "SqlServer"
 }
